# hinsight-dashboard

./: .gitignore  cloudbuild.yaml
hinsight-dashboard-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  alembic.ini  check_users.py  cloudbuild.yaml  inspect_audit.py  inspect_tenants.py  login.example.json  login_mfa.example.json  mfa_verify.example.json  pyproject.toml
hinsight-dashboard-backend/alembic/: env.py
hinsight-dashboard-backend/alembic/versions/: 001ef74a7d34_autogen_check.py  341ca173cf74_create_ingest_tables.py  35fb63a9269f_add_audit_events.py  4120445d3511_add_tenants_and_users.py  86e716e20261_check_autogen_wiring.py  97fc3ee2c418_create_ingest_tables.py  a449259f08d9_add_mfa_secret_column.py  aa531b0137b1_add_audit_events.py  aa531b0137b1_add_tenant_id_to_ingest_records.py  e2c73171ec45_add_user_preferences_alerts_.py  ee8ef3a2fe88_add_user_mfa_fields.py
hinsight-dashboard-backend/app/: db.py  deps.py  main.py
hinsight-dashboard-backend/app/api/: auth.py
hinsight-dashboard-backend/app/auth/: deps.py  jwt_current_user.py
hinsight-dashboard-backend/app/core/: actor.py  auth.py  data_region.py  logging.py
hinsight-dashboard-backend/app/db/: __init__.py  ingest_orm.py  models.py  seed.py  session.py  urls.py
hinsight-dashboard-backend/app/middleware/: abuse.py  abuse_guard.py  audit.py  auth.py  body_size.py  data_region.py  rate_limit.py  region.py  security.py  tenant.py
hinsight-dashboard-backend/app/models/: alert.py  audit_event.py  (+5 more)
hinsight-dashboard-backend/docs/: gcp-handoff.md  gcp-setup.md
hinsight-dashboard-backend/tests/: conftest.py  test_abuse_guard.py  test_hinsight.py  test_ingest.py  test_insights.py  test_rate_limit.py  test_rbac.py  test_request_id.py
(+42 files in other folders)
