[project]

name = "hinsight-dashboard-backend"
version = "0.1.0"
description = "FastAPI backend for Health Data Aggregation & Decision Support Dashboard"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "email-validator>=2.0.0",
  "python-dotenv>=1.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt<4",

  # Runtime ORM (imported by app)
  "sqlalchemy>=2.0",

  # Runtime auth/security (imported by app)
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "pyotp>=2.9.0",
]


[project.optional-dependencies]
db = [
  "alembic>=1.13",
  "psycopg2-binary>=2.9.9",
  
]


dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.3",
  "mypy>=1.8",
  "httpx>=0.27",
  "uvicorn[standard]",
]


all = [
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg2-binary>=2.9.9",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "pyotp>=2.9.0",
  "pytest",
  "ruff",
  "httpx",
  "uvicorn[standard]",
]


[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["infra"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"] # let formatter handle line length

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

